--- a/index.html
+++ b/index.html
@@ -327,9 +327,8 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/Marcin Grzegorzek.jpg" class="card-img-top" alt="Director: Prof. Dr. Marcin Grzegorzek" />
                     <div class="card-body"> 
-                        <p class="card-text"><font color="#000000">Prof. Dr. Marcin Grzegorzek</font> <br/>company</p>
+                        <p class="card-text" align="center"><font color="#000000">Prof. Dr. Marcin Grzegorzek</font> <br/>company</p>
                     </div>
- 
                 </div>
             </a>
         </div>
@@ -351,9 +350,8 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
             <a href="https://johnsee.net/" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/John See.jpg" class="card-img-top" alt="John See" />
-                 
-                    <div class="card-body p-2">
-                        <p><div class="card-title m-0" align="center">Prof. Dr. John See<br/><font size="3">company</font></div><p>
+                    <div class="card-body"> 
+                        <p class="card-text" align="center"><font color="#000000">Prof. Dr. John See</font> <br/>company</p>
                     </div>
                 </div>
             </a>
@@ -363,8 +361,8 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
             <a href="https://jagiellonian.academia.edu/BipinIndurkhya" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/Bipin Indurkhya.jpg" class="card-img-top" alt="Bipin Indurkhya" />
-                    <div class="card-body p-2">
-                        <p><div class="card-title m-0" align="center"><font size="3">Prof. Dr. Bipin Indurkhya</font></div><p>
+                    <div class="card-body"> 
+                        <p class="card-text" align="center"><font color="#000000">Prof. Dr. Bipin Indurkhya</font> <br/>company</p>
                     </div>
                 </div>
             </a>
@@ -374,8 +372,8 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
             <a href="https://members.loria.fr/MOBerger/index.html" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/Marie-Odile Berger.jpg" class="card-img-top" alt="Marie-Odile Berger" />
-                    <div class="card-body p-2">
-                        <p><div class="card-title m-0" align="center"><font size="3">Prof. Dr. Marie-Odile Berger</font></div><p>
+                    <div class="card-body"> 
+                        <p class="card-text" align="center"><font color="#000000">Prof. Dr. Marie-Odile Berger</font> <br/>company</p>
                     </div>
                 </div>
             </a>
@@ -385,8 +383,8 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
             <a href="https://www.kindai.ac.jp/english/research/researchers/introduce/shirahama-kimiaki-e96.html" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/Kimiaki Shirahama.jpg" class="card-img-top" alt="Kimiaki Shirahama" />
-                    <div class="card-body p-2">
-                        <p><div class="card-title m-0" align="center"><font size="3">Prof. Dr. Kimiaki Shirahama</font></div><p>
+                    <div class="card-body"> 
+                        <p class="card-text" align="center"><font color="#000000">Prof. Dr. Kimiaki Shirahama</font> <br/>company</p>
                     </div>
                 </div>
             </a>
@@ -397,8 +395,8 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
             <a href="http://www.yanke.org/" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/Yan Ke.jpg" class="card-img-top" alt="Yan Ke" />
-                    <div class="card-body p-2">
-                        <p><div class="card-title m-0" align="center"><font size="3">Dr. Yan Ke</font></div><p>
+                    <div class="card-body"> 
+                        <p class="card-text" align="center"><font color="#000000">Dr. Yan Ke</font> <br/>company</p>
                     </div>
                 </div>
             </a>
@@ -408,9 +406,8 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
             <a href="https://www.put.poznan.pl/artykul/dr-inz-ewa-lukasik-wiceprezydentem-audio-engineering-society-aes" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/Ewa Lukasik.png" class="card-img-top" alt="Ewa Łukasik" />
-                    <div class="card-body p-2">
-                        <p><div class="card-title m-0" align="center"><font size="3">Dr. Ewa Łukasik</font></div><p>
-                      
+                    <div class="card-body"> 
+                        <p class="card-text" align="center"><font color="#000000">Dr. Ewa Łukasik</font> <br/>company</p>
                     </div>
                 </div>
             </a>
