--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/Marcin Grzegorzek.jpg" class="card-img-top" alt="Director: Prof. Dr. Marcin Grzegorzek" />
                     <div class="card-body"> 
-                        <p class="card-text" align="center"><font color="#000000">Prof. Dr. Marcin Grzegorzek</font> <br/>company</p>
+                        <p class="card-text" align="center"><font color="#000000">Prof. Dr. Marcin Grzegorzek</font> <br/>University of Lübeck</p>
                     </div>
                 </div>
             </a>
@@ -339,7 +339,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/Gilles Simon.jpg" class="card-img-top" alt="Prof. Dr. Gilles Simon" />
                     <div class="card-body"> 
-                        <p class="card-text" align="center"><font color="#000000">Prof. Dr. Gilles Simon</font> <br/>company</p>
+                        <p class="card-text" align="center"><font color="#000000">Prof. Dr. Gilles Simon</font> <br/>University of Lorraine</p>
                     </div>
                 </div>
             </a>
@@ -351,7 +351,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/John See.jpg" class="card-img-top" alt="John See" />
                     <div class="card-body"> 
-                        <p class="card-text" align="center"><font color="#000000">Prof. Dr. John See</font> <br/>company</p>
+                        <p class="card-text" align="center"><font color="#000000">Prof. Dr. John See</font> <br/>Heriot-Watt University (Malaysia Campus)</p>
                     </div>
                 </div>
             </a>
@@ -362,7 +362,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/Bipin Indurkhya.jpg" class="card-img-top" alt="Bipin Indurkhya" />
                     <div class="card-body"> 
-                        <p class="card-text" align="center"><font color="#000000">Prof. Dr. Bipin Indurkhya</font> <br/>company</p>
+                        <p class="card-text" align="center"><font color="#000000">Prof. Dr. Bipin Indurkhya</font> <br/>Jagiellonian University</p>
                     </div>
                 </div>
             </a>
@@ -373,7 +373,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/Marie-Odile Berger.jpg" class="card-img-top" alt="Marie-Odile Berger" />
                     <div class="card-body"> 
-                        <p class="card-text" align="center"><font color="#000000">Prof. Dr. Marie-Odile Berger</font> <br/>company</p>
+                        <p class="card-text" align="center"><font color="#000000">Prof. Dr. Marie-Odile Berger</font> <br/>INRIA</p>
                     </div>
                 </div>
             </a>
@@ -384,7 +384,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/Kimiaki Shirahama.jpg" class="card-img-top" alt="Kimiaki Shirahama" />
                     <div class="card-body"> 
-                        <p class="card-text" align="center"><font color="#000000">Prof. Dr. Kimiaki Shirahama</font> <br/>company</p>
+                        <p class="card-text" align="center"><font color="#000000">Prof. Dr. Kimiaki Shirahama</font> <br/>Kindai University</p>
                     </div>
                 </div>
             </a>
@@ -396,7 +396,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/Yan Ke.jpg" class="card-img-top" alt="Yan Ke" />
                     <div class="card-body"> 
-                        <p class="card-text" align="center"><font color="#000000">Dr. Yan Ke</font> <br/>company</p>
+                        <p class="card-text" align="center"><font color="#000000">Dr. Yan Ke</font> <br/>Clobotics Research</p>
                     </div>
                 </div>
             </a>
@@ -407,7 +407,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/Ewa Lukasik.png" class="card-img-top" alt="Ewa Łukasik" />
                     <div class="card-body"> 
-                        <p class="card-text" align="center"><font color="#000000">Dr. Ewa Łukasik</font> <br/>company</p>
+                        <p class="card-text" align="center"><font color="#000000">Dr. Ewa Łukasik</font> <br/>Poznan University of Technology</p>
                     </div>
                 </div>
             </a>
