--- a/index.html
+++ b/index.html
@@ -318,9 +318,8 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
         <br/>
         <br/>
         <br/>
-        <h2 id="research collaborators">RESEARCH COLLABORATORS (PARTIAL)</h2>
-        <div class="research collaborators">
-       <div class="d-flex flex-wrap align-content-stretch justify-content-start m-n2 pt-5 no-gutters" style="display:inline">
+        <h2 id="RESEARCH COLLABORATORS (PARTIAL)" class="about-tiles">RESEARCH COLLABORATORS (PARTIAL)</h2>
+       <div class="d-flex align-content-stretch justify-content-center flex-wrap no-gutters mx-n2">
   
         <div class="col-6 col-sm-3 col-md-2 mb-3">
             <a href="https://www.imi.uni-luebeck.de/en/institute/staff/grzegorzek-marcin.html" class="no-decoration">
