--- a/index.html
+++ b/index.html
@@ -272,9 +272,8 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
       <div class="d-flex align-content-stretch justify-content-center flex-wrap no-gutters mx-n2">
 -->
       
-      <h2 id="managers">MANAGERS</h2>
-      <div class="managers">
-     <div class="d-flex align-content-stretch justify-content-start flex-wrap m-n2 pt-5 no-gutters">
+      <h2 id="MANAGERS" class="about-tiles">MANAGERS</h2>
+     <div class="d-flex align-content-stretch justify-content-start flex-wrap m-n2 pt-5 no-gutters" style="display:inline">
   
         <div class="col-6 col-sm-3 col-md-2 mb-3">
             <a href="https://xinyu1213.github.io" class="no-decoration">
@@ -321,7 +320,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
         <br/>
         <h2 id="RESEARCH COLLABORATORS (PARTIAL)">RESEARCH COLLABORATORS (PARTIAL)</h2>
         <div class="managers">
-       <div class="d-flex align-content-stretch justify-content-start flex-wrap m-n2 pt-5 no-gutters">
+       <div class="d-flex align-content-stretch justify-content-start flex-wrap m-n2 pt-5 no-gutters" style="display:inline">
 
   
         <div class="col-6 col-sm-3 col-md-2 mb-3">
