--- a/index.html
+++ b/index.html
@@ -273,8 +273,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
 -->
       
       <h2 id="MANAGERS" class="about-tiles">MANAGERS</h2>
-     <div class="d-flex align-content-stretch justify-content-start flex-wrap m-n2 pt-5 no-gutters" style="display:inline">
-  
+     <div class="d-flex align-content-stretch justify-content-start flex-wrap no-gutters mx-n2">
         <div class="col-6 col-sm-3 col-md-2 mb-3">
             <a href="https://xinyu1213.github.io" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
@@ -318,9 +317,8 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
         <br/>
         <br/>
         <br/>
-        <h2 id="RESEARCH COLLABORATORS (PARTIAL)">RESEARCH COLLABORATORS (PARTIAL)</h2>
-        <div class="managers">
-       <div class="d-flex align-content-stretch justify-content-start flex-wrap m-n2 pt-5 no-gutters" style="display:inline">
+        <h2 id="RESEARCH COLLABORATORS (PARTIAL)" class="about-tiles">RESEARCH COLLABORATORS (PARTIAL)</h2>
+       <div class="d-flex align-content-stretch justify-content-start flex-wrap no-gutters mx-n2"  style="display:inline">
 
   
         <div class="col-6 col-sm-3 col-md-2 mb-3">
