--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/Marcin Grzegorzek.jpg" class="card-img-top" alt="Director: Prof. Dr. Marcin Grzegorzek" />
                     <div class="card-body"> 
-                        <p class="card-text" align="center"><font color="#000000">Prof. Dr. Marcin Grzegorzek</font> <br/>University of Lübeck</p>
+                        <p class="card-text" align="center"><font color="#000000">Prof. Dr. Marcin Grzegorzek</font> <br/><font size="1">University of Lübeck</font></p>
                     </div>
                 </div>
             </a>
