--- a/team.html
+++ b/team.html
@@ -188,7 +188,7 @@
             </div>
             <div class="team col-sm-8 col-md-9">
                 <div class="card-body">
-                    <a href="/members/salvaneschi">
+                    <a href="https://cong-yang.github.io/">
                     <h5 class="card-title">Prof Cong Yang</h5>
                     <h6 class="card-subtitle mb-2 text-muted">Director</h6>
                     <p class="card-text">
