--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
         <div class="col-6 col-sm-3 col-md-2 mb-3">
             <a href="https://www.put.poznan.pl/artykul/dr-inz-ewa-lukasik-wiceprezydentem-audio-engineering-society-aes" class="no-decoration">
                 <div class="card hoverable h-100 m-2">
-                    <img src="/assets/img/Ewa Lukasik.png" class="card-img-top" alt="Dr. Zeyd Boukhers" />
+                    <img src="/assets/img/Dr. Zeyd Boukhers.png" class="card-img-top" alt="Dr. Zeyd Boukhers" />
                     <div class="card-body"> 
                         <p class="card-text" align="center"><font color="#000000">Dr. Ewa Łukasik</font> <br/>Fraunhofer FIT</p>
                     </div>
