--- a/index.html
+++ b/index.html
@@ -417,7 +417,7 @@ please find <a href="/teaching">our courses, theses, and jobs</a>.</p>
                 <div class="card hoverable h-100 m-2">
                     <img src="/assets/img/Dr. Zeyd Boukhers.png" class="card-img-top" alt="Dr. Zeyd Boukhers" />
                     <div class="card-body"> 
-                        <p class="card-text" align="center"><font color="#000000">Dr. Ewa Łukasik</font> <br/>Fraunhofer FIT</p>
+                        <p class="card-text" align="center"><font color="#000000">Dr. Zeyd Boukhers</font> <br/>Fraunhofer FIT</p>
                     </div>
                 </div>
             </a>
